// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with ignoreHighlights renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-md-9-62"
  style={
    Object {
      "marginTop": -40,
    }
  }
>
  <div
    className="MuiGrid-container-1 MuiGrid-spacing-xs-8-22"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-6-33"
    >
      <div
        className="Ratio "
        style={
          Object {
            "display": "block",
            "overflow": "hidden ",
          }
        }
      >
        <div
          className="Ratio-ratio "
          style={
            Object {
              "height": 0,
              "paddingTop": "66.66666666666667%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className="Ratio-content "
            style={
              Object {
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              to="/123"
            >
              <img
                alt="foo"
                src="bar"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </div>
            <div
              style={
                Object {
                  "background": "rgba(0, 0, 0, 0.6)",
                  "bottom": 0,
                  "color": "white",
                  "height": 90,
                  "left": 0,
                  "padding": 20,
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "float": "left",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "color": "white",
                      "display": "block",
                      "textDecoration": "none",
                    }
                  }
                  to="/123"
                >
                  <h3
                    className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                  >
                    foo
                  </h3>
                </div>
              </div>
              <div
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <div
                  id={123}
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                >
                  Favorite
                </div>
                <button
                  className="MuiButtonBase-root-122 MuiIconButton-root-116"
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "color": "white",
                      "marginRight": 16,
                    }
                  }
                  tabIndex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-121"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-125"
                      color={undefined}
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <path
                          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root-131"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-6-33"
    >
      <div
        className="Ratio "
        style={
          Object {
            "display": "block",
            "overflow": "hidden ",
          }
        }
      >
        <div
          className="Ratio-ratio "
          style={
            Object {
              "height": 0,
              "paddingTop": "66.66666666666667%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className="Ratio-content "
            style={
              Object {
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              to="/234"
            >
              <img
                alt="foo"
                src="bar"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </div>
            <div
              style={
                Object {
                  "background": "rgba(0, 0, 0, 0.6)",
                  "bottom": 0,
                  "color": "white",
                  "height": 90,
                  "left": 0,
                  "padding": 20,
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "float": "left",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "color": "white",
                      "display": "block",
                      "textDecoration": "none",
                    }
                  }
                  to="/234"
                >
                  <h3
                    className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                  >
                    foo
                  </h3>
                </div>
              </div>
              <div
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <div
                  id={234}
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                >
                  Favorite
                </div>
                <button
                  className="MuiButtonBase-root-122 MuiIconButton-root-116"
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "color": "white",
                      "marginRight": 16,
                    }
                  }
                  tabIndex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-121"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-125"
                      color={undefined}
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <path
                          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root-131"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-6-33"
    >
      <div
        className="Ratio "
        style={
          Object {
            "display": "block",
            "overflow": "hidden ",
          }
        }
      >
        <div
          className="Ratio-ratio "
          style={
            Object {
              "height": 0,
              "paddingTop": "66.66666666666667%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className="Ratio-content "
            style={
              Object {
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              to="/345"
            >
              <img
                alt="foo"
                src="bar"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </div>
            <div
              style={
                Object {
                  "background": "rgba(0, 0, 0, 0.6)",
                  "bottom": 0,
                  "color": "white",
                  "height": 90,
                  "left": 0,
                  "padding": 20,
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "float": "left",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "color": "white",
                      "display": "block",
                      "textDecoration": "none",
                    }
                  }
                  to="/345"
                >
                  <h3
                    className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                  >
                    foo
                  </h3>
                </div>
              </div>
              <div
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <div
                  id={345}
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                >
                  Favorite
                </div>
                <button
                  className="MuiButtonBase-root-122 MuiIconButton-root-116"
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "color": "white",
                      "marginRight": 16,
                    }
                  }
                  tabIndex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-121"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-125"
                      color={undefined}
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <path
                          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root-131"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`without currentUser renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-md-9-62"
  style={
    Object {
      "marginTop": -40,
    }
  }
>
  <div
    className="MuiGrid-container-1 MuiGrid-spacing-xs-8-22"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
    >
      <div
        className="Ratio "
        style={
          Object {
            "display": "block",
            "overflow": "hidden ",
          }
        }
      >
        <div
          className="Ratio-ratio "
          style={
            Object {
              "height": 0,
              "paddingTop": "33.333333333333336%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className="Ratio-content "
            style={
              Object {
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              to="/123"
            >
              <img
                alt="foo"
                src="bar"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </div>
            <div
              style={
                Object {
                  "background": "rgba(0, 0, 0, 0.6)",
                  "bottom": 0,
                  "color": "white",
                  "height": 90,
                  "left": 0,
                  "padding": 20,
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "float": "left",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "color": "white",
                      "display": "block",
                      "textDecoration": "none",
                    }
                  }
                  to="/123"
                >
                  <h3
                    className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                  >
                    foo
                  </h3>
                </div>
              </div>
              <div
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <button
                  className="MuiButtonBase-root-122 MuiIconButton-root-116"
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "color": "white",
                      "marginRight": 16,
                    }
                  }
                  tabIndex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-121"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-125"
                      color={undefined}
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <path
                          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root-131"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
    >
      <div
        className="Ratio "
        style={
          Object {
            "display": "block",
            "overflow": "hidden ",
          }
        }
      >
        <div
          className="Ratio-ratio "
          style={
            Object {
              "height": 0,
              "paddingTop": "33.333333333333336%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className="Ratio-content "
            style={
              Object {
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              to="/234"
            >
              <img
                alt="foo"
                src="bar"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </div>
            <div
              style={
                Object {
                  "background": "rgba(0, 0, 0, 0.6)",
                  "bottom": 0,
                  "color": "white",
                  "height": 90,
                  "left": 0,
                  "padding": 20,
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "float": "left",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "color": "white",
                      "display": "block",
                      "textDecoration": "none",
                    }
                  }
                  to="/234"
                >
                  <h3
                    className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                  >
                    foo
                  </h3>
                </div>
              </div>
              <div
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <button
                  className="MuiButtonBase-root-122 MuiIconButton-root-116"
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "color": "white",
                      "marginRight": 16,
                    }
                  }
                  tabIndex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-121"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-125"
                      color={undefined}
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <path
                          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root-131"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-6-33"
    >
      <div
        className="Ratio "
        style={
          Object {
            "display": "block",
            "overflow": "hidden ",
          }
        }
      >
        <div
          className="Ratio-ratio "
          style={
            Object {
              "height": 0,
              "paddingTop": "66.66666666666667%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className="Ratio-content "
            style={
              Object {
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              to="/345"
            >
              <img
                alt="foo"
                src="bar"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </div>
            <div
              style={
                Object {
                  "background": "rgba(0, 0, 0, 0.6)",
                  "bottom": 0,
                  "color": "white",
                  "height": 90,
                  "left": 0,
                  "padding": 20,
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "float": "left",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "color": "white",
                      "display": "block",
                      "textDecoration": "none",
                    }
                  }
                  to="/345"
                >
                  <h3
                    className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                  >
                    foo
                  </h3>
                </div>
              </div>
              <div
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <button
                  className="MuiButtonBase-root-122 MuiIconButton-root-116"
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "color": "white",
                      "marginRight": 16,
                    }
                  }
                  tabIndex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-121"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-125"
                      color={undefined}
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <path
                          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root-131"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`without ignoreHighlights renders correctly 1`] = `
<div
  className="MuiGrid-item-2 MuiGrid-grid-xs-12-39 MuiGrid-grid-md-9-62"
  style={
    Object {
      "marginTop": -40,
    }
  }
>
  <div
    className="MuiGrid-container-1 MuiGrid-spacing-xs-8-22"
  >
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
    >
      <div
        className="Ratio "
        style={
          Object {
            "display": "block",
            "overflow": "hidden ",
          }
        }
      >
        <div
          className="Ratio-ratio "
          style={
            Object {
              "height": 0,
              "paddingTop": "33.333333333333336%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className="Ratio-content "
            style={
              Object {
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              to="/123"
            >
              <img
                alt="foo"
                src="bar"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </div>
            <div
              style={
                Object {
                  "background": "rgba(0, 0, 0, 0.6)",
                  "bottom": 0,
                  "color": "white",
                  "height": 90,
                  "left": 0,
                  "padding": 20,
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "float": "left",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "color": "white",
                      "display": "block",
                      "textDecoration": "none",
                    }
                  }
                  to="/123"
                >
                  <h3
                    className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                  >
                    foo
                  </h3>
                </div>
              </div>
              <div
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <div
                  id={123}
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                >
                  Favorite
                </div>
                <button
                  className="MuiButtonBase-root-122 MuiIconButton-root-116"
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "color": "white",
                      "marginRight": 16,
                    }
                  }
                  tabIndex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-121"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-125"
                      color={undefined}
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <path
                          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root-131"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-12-39"
    >
      <div
        className="Ratio "
        style={
          Object {
            "display": "block",
            "overflow": "hidden ",
          }
        }
      >
        <div
          className="Ratio-ratio "
          style={
            Object {
              "height": 0,
              "paddingTop": "33.333333333333336%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className="Ratio-content "
            style={
              Object {
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              to="/234"
            >
              <img
                alt="foo"
                src="bar"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </div>
            <div
              style={
                Object {
                  "background": "rgba(0, 0, 0, 0.6)",
                  "bottom": 0,
                  "color": "white",
                  "height": 90,
                  "left": 0,
                  "padding": 20,
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "float": "left",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "color": "white",
                      "display": "block",
                      "textDecoration": "none",
                    }
                  }
                  to="/234"
                >
                  <h3
                    className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                  >
                    foo
                  </h3>
                </div>
              </div>
              <div
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <div
                  id={234}
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                >
                  Favorite
                </div>
                <button
                  className="MuiButtonBase-root-122 MuiIconButton-root-116"
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "color": "white",
                      "marginRight": 16,
                    }
                  }
                  tabIndex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-121"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-125"
                      color={undefined}
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <path
                          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root-131"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-2 MuiGrid-grid-xs-6-33"
    >
      <div
        className="Ratio "
        style={
          Object {
            "display": "block",
            "overflow": "hidden ",
          }
        }
      >
        <div
          className="Ratio-ratio "
          style={
            Object {
              "height": 0,
              "paddingTop": "66.66666666666667%",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            className="Ratio-content "
            style={
              Object {
                "height": "100%",
                "left": 0,
                "position": "absolute",
                "top": 0,
                "width": "100%",
              }
            }
          >
            <div
              to="/345"
            >
              <img
                alt="foo"
                src="bar"
                style={
                  Object {
                    "width": "100%",
                  }
                }
              />
            </div>
            <div
              style={
                Object {
                  "background": "rgba(0, 0, 0, 0.6)",
                  "bottom": 0,
                  "color": "white",
                  "height": 90,
                  "left": 0,
                  "padding": 20,
                  "position": "absolute",
                  "right": 0,
                }
              }
            >
              <div
                style={
                  Object {
                    "float": "left",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "color": "white",
                      "display": "block",
                      "textDecoration": "none",
                    }
                  }
                  to="/345"
                >
                  <h3
                    className="MuiTypography-root-92 MuiTypography-subheading-99 MuiTypography-colorInherit-111"
                  >
                    foo
                  </h3>
                </div>
              </div>
              <div
                style={
                  Object {
                    "float": "right",
                  }
                }
              >
                <div
                  id={345}
                  style={
                    Object {
                      "color": "white",
                    }
                  }
                >
                  Favorite
                </div>
                <button
                  className="MuiButtonBase-root-122 MuiIconButton-root-116"
                  disabled={false}
                  href={undefined}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  style={
                    Object {
                      "color": "white",
                      "marginRight": 16,
                    }
                  }
                  tabIndex="0"
                  target="_blank"
                  type="button"
                >
                  <span
                    className="MuiIconButton-label-121"
                  >
                    <svg
                      aria-hidden="true"
                      className="MuiSvgIcon-root-125"
                      color={undefined}
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <g>
                        <path
                          d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM17 13l-5 5-5-5h3V9h4v4h3z"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    className="MuiTouchRipple-root-131"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
